# CanistraLabs

./: .gitignore  AGENTS.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_OVERVIEW.md  BACKEND_ANALYSIS.md  CODE_AUDIT_REPORT.md  FINAL_TESTING_REPORT.md  FINAL_VALIDATION_SUMMARY.md  ICP_SKILLS_SETUP.md  QUICK_FIXES.md  README.md  backend.log.old.20260321_112757  backend.log.old.20260331_225359  backend.log.old.20260331_230937  backend.sh  comprehensive_integration_validation.json  comprehensive_integration_validation.py  dfx.json  final_testing_report.py  frontend.log.old.20260321_112802  frontend.log.old.20260331_225412  frontend.log.old.20260331_230952  frontend.sh  frontend_api_integration_test.py  frontend_hooks_verification.py  frontend_implementation_test.py  skills-lock.json  start.sh  stop.sh  testnet_deployment_report.json  testnet_deployment_simulator.py
backend/: .env.example  =41.0.0  =5.4.6  README.md  alembic.ini  check_users_projects.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start_manual.txt  test_dfx.py  test_domain_management.py  test_dynamic_deployment.py  test_motoko_canisters_detailed.py  test_password_reset.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/cache/: __init__.py  wallet_cache.py
backend/app/database/: db.py  init.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  canister.py  deployment.py  domain.py  email_verification_token.py  enrollment.py  password_reset_token.py  project.py  projectMetrics.py  user.py
backend/app/schemas/: dfx.py  project.py  responses.py  user.py
backend/app/services/: auth.py  autoFundingDetector.py  auto_funding_detector.py  canisterFactory.py  canisterMetrics.py  canister_factory.py  deployment.py  dfxApiService.py  dfxCommand.py  dfxLifecycle.py  dfxRegistry.py  domainManagement.py  domain_management.py  dynamicDeployment.py  email_verification.py  icpIdentityManager.py  icp_identity_manager.py  password_reset.py  projects.py  rosettaClient.py  rosetta_client.py
backend/migrations/: env.py
backend/scripts/: dev.sh  setup.sh  test-deploy.sh
backend/tests/: test_deploy_normalize.py  test_dfx_api.py  test_dfx_api_service.py  test_dfx_lifecycle.py
docs/: AGENT.md  (+11 more)
(+364 files in other folders)
